Added property to enable instance exposing type annotations.